  - Lib/RIB/shaders/ReadShader.xml node that uses ShaderInfo call inside <control_code> section
    for reloading shader parameters
  - NodeParam new attributes : enabled, spaceDef, arraySize, defaultArray, valueArray 
    (though arrays parameters support is not fully implemented yet...)
  - Fixed some shading nodes, code, shaders and textures for Air, Aqsis, Pixie and RenderDotC compatibility 
  
version 0.3.0 (16 Apr 2013)
  SwatchNode for image preview in shading network
  Duplicate nodes with links
  Clipboard (Copy/Cut/Paste) operations in XML format
  NodeEditor saves changes to node.
  Texture patterns and fractals from ShadeTree colection added to Library.

version 0.2.9 (5 Apr 2013)
  TextParam widget
  NoteNode -- UI node for shading network description
  ConnectorNode -- UI node for links organisation
    Ctrl-drag (Mac: Cmd-drag) node parameter connector to create ConnectorNode
  Actions:
    - select all nodes (Cmd+A)
    - select nodes below in hierarchy (Cmd+Dn)
    - select nodes above in hierarchy (Cmd+Up)
    - duplicate nodes (Cmd+D) (without connections yet)
  Store Recent Networks in File menu
  Store Recent Projects in File menu
  Saving project description file 'meshadered.prj' in project root
  Added new nodes to Library from DRL
  Library folders rearranged a little bit

version 0.2.8 (20 Jan 2013)
  Few texture nodes were added to Library (analogs of some useful Slim nodes),
  and a bunch of very interesting nodes from DRL (aka Lex Darlog)
  Added shadow to GfxNode (9 Nov 2012)
  Added curved links support (8 Nov 2012)
  Added "Snap to grid" support (8 Nov 2012)
  Added general functions for renaming nodes and parameters (2 Nov 2012)
  Added space option support for parameters: (30 Oct 2012)
   ["rgb", "hsv", "hsl", "xyz", "XYZ", "YIQ"] for color
   ["current", "shader", "object", "camera", "world", "raster", "NDC", "screen"]
   for point, vector, normal, matrix
  And very annoying bug with lost links after saving was fixed. (I hope)
